--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ html5lib==1.0.1
 itsdangerous==0.24
 jdcal==1.4
 Jinja2==2.10
-MarkupSafe==1.0
-mechanize==0.3.6
+MarkupSafe==1.1
+mechanize==0.4.5
 openpyxl==2.5.5
 selenium==3.14.0
 six==1.11.0
 urllib3==1.23
 webencodings==0.5.1
 Werkzeug==0.14.1
+requests
